# bitgn-challenge

./: .gitignore  README.md
agent/: .env.example  Makefile  README.md  agent.py  main.py  pyproject.toml  security.py  tools.py
agent/bitgn/: harness_connect.py  harness_pb2.py
agent/bitgn/vm/: mini_pb2.py  pcm_connect.py
agent/logs/: tasks_pac1_dev.md
agent/notes/: architecture.md  chat_insights.md  crm_world.md  erc3_vs_pac.md  run1_analysis.md
