[project]
name = "bitgn-pac-agent"
version = "0.1.0"
description = "BitGN PAC agent — OpenAI ChatGPT API with code-level security"
requires-python = ">=3.14"
dependencies = [
    "openai>=1.60.0",
    "protobuf>=5.29.0",
    "connectrpc>=0.9.0",
    "python-dotenv>=1.1.0",
    "grpcio-tools>=1.71.0",
    "certifi>=2024.0.0",
]

[tool.uv]
package = false
